The jWorkSheet change list
**************************

release 0.83 (2009-02-XX)
+ multilanguage application, support: English (en), Czech (cs)
+ module support
+ UJO Framework release 0.831 is used to faster reading XML files

release 0.82 (2008-12-12)
+ look and feel called Nimbus (form Java 6) is supported now, it is a defaut look for Linux
+ button Delete calls an action Sort too
+ code cleaning
- double data saving from a SysTray exit action is fixed

release 0.81 (2008-10-26)
+ the better security of your personal data: if the data.xml file is missing or is empty, the application tries to restore a backup and show an info dialog
+ the first application parameter can specify a data directory (for a portable launching e.g.)
+ the project sorting is allowed by a click on the table header
+ UJO Framework release 0.81 is used

release 0.80 (2008-09-09)
- application launching for JRE 5.0 was fixed
+ the home was moved to http://jworksheet.ponec.net
+ jWorkSheet is based on the UJO Framework release 0.80 
+ class documentation was improved in a JavaDoc format

release 0.79 (2008-06-18)
+ parameter "DecimalTimeFormat" allows to select a period format (decimal/hour) for display
+ parameter "SystemTraySecondClick" can select an action for the second mouse click on a the systray
+ data file "data.xml" is backuped for better security in the first run per day only
+ parameter report contains default values of each parameter
+ memory consumption was improved
- tooltip bugfixing

release 0.78.1 (2008-05-16)
- bug fixing: application release 0.78 reset user parameters to a default value.

release 0.78 (2008-05-14)
+ better performance of data saving thanks to UJO Framework release 0.74.final
+ small different improvements (report, gui, parameter description) was done
- an exception during "Detail report in a table format" on Java 5.0 was fixed 

release 0.77 (2008-03-18) 
+ new report "Detail report in a table format" is done